--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-persist": "^4.0.0",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,7 +30,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
