--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-persist": "^4.0.0",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,7 +26,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
