--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.7.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
+    "next-client-cookies": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
