--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.17.30",
+    "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
