--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "20.17.30",
+    "@types/node": "^20.17.30",
     "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
