--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux-persist": "^4.0.0",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
